force-app/main/default/objects/CLQ_Junction_RuleRegs__c/CLQ_Junction_RuleRegs__c.object-meta.xml
<CustomObject>
    <description>Junction object between Rules and Regulations</description>
    <label>Rule Regulation</label>
    <nameField>
        <displayFormat>RR# {00000000}</displayFormat>
        <label>Rule Regulation No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Regulations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>