force-app/main/default/objects/CLQ_Junction_RuleRegs__c/fields/CLQ_Domain_Rule__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Domain_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Domain Rule</label>
    <referenceTo>CLQ_Domain_Rule__c</referenceTo>
    <relationshipLabel>Rule Regulations</relationshipLabel>
    <relationshipName>Rule_Regulations</relationshipName>
    <type>Lookup</type>
</CustomField>