force-app/main/default/objects/CLQ_Junction_RuleRegs__c/fields/CLQ_Regulation__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Regulation__c</fullName>
    <description>This field implements the master-detail relationship between the master Regulation object and the detail CLQ_Junction_RuleRegs object</description>
    <label>Regulation</label>
    <referenceTo>CLQ_Regulation__c</referenceTo>
    <relationshipLabel>Associated Rules</relationshipLabel>
    <relationshipName>CLQ_Junction_RuleRegs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>