force-app/main/default/objects/CLQ_Junction_RuleRegs__c/fields/CLQ_Rule__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field implements the master-detail relationship between the master Rules object and the detail CLQ_Junction_RuleRegs object</description>
    <label>Rule</label>
    <referenceTo>CLQ_Rule__c</referenceTo>
    <relationshipLabel>Associated Regulations</relationshipLabel>
    <relationshipName>CLQ_Junction_RuleRegs</relationshipName>
    <type>Lookup</type>
</CustomField>